# fazzymeter

./: .mxproject  Cargo.toml  Makefile  STM32F401RETx_FLASH.ld  TODO.md  fazzymeter.ioc  memory.x  nucleo.cfg  realsense.py  startup_stm32f401xe.s  test.mk
.cargo/: config
Inc/: stm32f4xx_hal_conf.h
Src/: loop.c  main.c  stm32f4xx_hal_msp.c
ar/: hoge.py  sample.py
examples/: hello.rs  led_blink.rs  semihosting_outout.rs  serial.rs
host/: realsense.py  sample.py  sample2.py
src/ref/: Makefile
src/ref/Src/: main.c  stm32f4xx_hal_msp.c
