[package]
authors = ["yksym"]
edition = "2018"
readme = "README.md"
name = "fazzymeter"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
#stm32f4xx-hal = "0.3.0"

[dependencies.stm32f4xx-hal]
version = "0.3.0"
features = ["stm32f446"]

#[dependencies.stm32f4]
#version = "0.6.0"
#features = ["stm32f446", "rt"]


# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"


# this lets you use `cargo fix`!
[[bin]]
name = "fazzymeter"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
